--- a/dev_files/templates/index.html
+++ b/dev_files/templates/index.html
@@ -7,6 +7,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HW10WebScrape</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <style>
+      .pad_l {padding-left: 20px;}
+
+      .pad_2 {
+        padding: 15px 15px 15px 15px;
+      }
+
+      .border1 {
+        border-style: solid;
+        border-width: medium;
+        }
+      .border2 {
+        border-style: solid;
+        border-width: 2px;
+        padding-bottom: 15px;
+        }
+
+  </style>
+
+
+
 </head>
 
 <body>
@@ -17,47 +39,51 @@
       <p><a class="btn btn-primary btn-lg" href="../scrape" role="button">Scrape New Data</a></p>
     </div>
 
+  </div>
 
+
+
+  <div class="container">
 
     <!-- Latest Mars News -->
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col pad_l">
         
-        <h3>Latest Mars News</h3>
-        <p>{{ mars.news_title }}</p>
-        <p>{{ mars.news_p }}</p>
+          <h2>Latest Mars News</h2>
+          <strong><p>{{ mars.news_title }}</p></strong>
+          <p>{{ mars.news_p }}</p>
+          
         </div>
     </div>
 
-    <!-- Featured Mars Image -->
+
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-        <h3>Featured Mars Image</h3>
-        <img src= {{ mars.feat_img }} width: 50% />
+      
+      <div class="col-md-8">
+      <!-- Featured Mars Image -->
+    
+          <strong><h2>Featured Mars Image</h2></strong>
+          <img src= {{ mars.feat_img }} style="width:100%">
         
        
-        </div>
-    </div>
+      </div>
+    
+
+      <div class="col-md-4">
+
+        <!-- Current Weather on Mars -->
+          <div class ="col border1 pad_2">
+            <h3>Current Weather on Mars</h3>
+            <p>{{ mars.weather }}</p>
+          </div>   
+
+        <!-- Mars Facts -->
+          <h3>Mars Facts</h3>
+          <p>{{ mars.mfacts }}</p>
+      </div>
 
 
-    <!-- Current Weather on Mars -->
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-        
-        <h3>Current Weather on Mars</h3>
-        <p>{{ mars.weather }}</p>
-        </div>
-    </div>
 
-
-
-    <!-- Mars Facts -->
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-        
-        <h3>Mars Facts</h3>
-        <p>{{ mars.mfacts }}</p>
-        </div>
     </div>
     
 
@@ -65,11 +91,45 @@
 
     <!-- Mars Hemispheres -->
     <div class="row">
-      <div class="col-md-8 col-md-offset-2">
-      <h3>Mars Hemispheres</h3>
-      <img src= {{ mars.hemi_img }} width: 50% />
+
+      <div class="col text-center">
+
+      <strong><h2>Mars Hemispheres</h2></strong>
+          <main class = container>
+            
+
+            <div class="row">
+
+              <div class="col-md-6 border2">
+                <strong><h3> {{ mars.hemi_img.0.title }} </h3></strong>
+                <img src= {{ mars.hemi_img.0.img_url }} style="width:100%">
+              </div>
+
+              <div class="col-md-6 border2">
+                <strong><h3> {{ mars.hemi_img.1.title }} </h3></strong>
+                <img src= {{ mars.hemi_img.1.img_url }} style="width:100%">
+              </div>
+
+            </div>
+
+
+            <div class="row">
+
+              <div class="col-md-6 border2">
+                <strong><h3> {{ mars.hemi_img.2.title }} </h3></strong>
+                <img src= {{ mars.hemi_img.2.img_url }} style="width:100%">
+              </div>
+
+              <div class="col-md-6 border2">
+                <strong><h3> {{ mars.hemi_img.3.title }} </h3></strong>
+                <img src= {{ mars.hemi_img.3.img_url }} style="width:100%">
+              </div>
+
+            </div>
       
-      
+        </main>
+
+
       </div>
     </div>
   
